apps/coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: coder
      port:
        number: 80
  tls:
    - hosts:
        - coder
